# worktree-merge-consensus

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  deny.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  diagnostic-build.yml  release.yml
.superpowers/sdd/: participant-injection-task-4-report.md
crates/app-server-client/: Cargo.toml
crates/app-server-client/src/: client.rs  compat.rs  lib.rs  transport.rs  types.rs
crates/app-server-client/tests/: client.rs  compat.rs  json_rpc.rs  process.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  installation.rs  main.rs  output.rs  select.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: git.rs  hash.rs  lib.rs  participant.rs  prompts.rs  protocol.rs  state.rs
crates/core/tests/: git_inspector.rs  participant_response.rs  prompts.rs  protocol.rs  state_machine.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: coordinator.rs  lib.rs  lifecycle.rs  observation.rs  participant_binding.rs  policy.rs  server.rs  store.rs  wire.rs
crates/daemon/tests/: coordinator.rs  lifecycle.rs  server.rs  store.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  tools.rs
crates/mcp-server/tests/: mcp.rs  plugin_contract.rs
docs/: compatibility.md  protocol-v1.md  protocol-v2.md  real-codex-smoke-test.md
docs/superpowers/plans/: 2026-07-18-worktree-merge-consensus.md  2026-07-19-codex-version-floor.md  2026-07-19-explicit-task-worktree-binding.md  2026-07-22-unattended-verification.md  2026-07-23-participant-patch-tool-injection.md  2026-07-24-completed-integration-command-audit-recovery.md  2026-07-24-ephemeral-primary-event-execution.md
docs/superpowers/specs/: 2026-07-18-worktree-merge-consensus-design.md  2026-07-19-codex-version-floor-design.md  2026-07-19-explicit-task-worktree-binding-design.md  2026-07-22-unattended-verification-design.md  2026-07-23-participant-patch-tool-injection-design.md  2026-07-24-ephemeral-primary-event-execution-design.md
plugin/: .mcp.json
plugin/.codex-plugin/: plugin.json
plugin/scripts/: start-mcp.sh
plugin/skills/worktree-merge-consensus/: SKILL.md
plugin/skills/worktree-merge-consensus/agents/: openai.yaml
plugin/skills/worktree-merge-consensus/references/: protocol.md
schemas/: protocol-v1.json
schemas/app-server/: 0.144.5-methods.json  supported-methods.json
tests/: docs.sh  release-gate.sh  release.sh  static-link.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: acceptance.rs
tests/fake-app-server/: Cargo.toml
tests/fake-app-server/src/: main.rs
tests/fixtures/transcripts/: conflict-free.json  plan-revision.json  result-revision.json
