[workspace]
members = ["crates/app-server-client", "crates/core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
hex = "0.4.3"
jsonschema = { version = "0.30.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sha2 = "0.10.9"
thiserror = "2.0"
tempfile = "3.20"
tokio = { version = "1.44", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
