[package]
name = "codex-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
app-server-client = { path = "../app-server-client" }
async-trait.workspace = true
clap.workspace = true
consensus-core = { path = "../core" }
consensus-daemon = { path = "../daemon" }
consensus-mcp-server = { path = "../mcp-server" }
dialoguer.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
