[package]
name = "consensus-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
app-server-client = { path = "../app-server-client" }
async-trait.workspace = true
consensus-core = { path = "../core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
shell-words.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
